<resources>
    <string name="app_name">WeberSprinkler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="status_and_control">Status and Control</string>
    <string name="modify_program">Modify Program</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_manual">ManualActivity</string>
    <string name="status">Status:</string>
    <string name="program">Program:</string>
    <string name="zone">Zone:</string>
    <string name="time_left">Time Left:</string>
    <string name="upcoming">Upcoming:</string>
    <string name="time">Time:</string>
    <string-array name="zones_array">
        <item>Zone 1</item>
        <item>Zone 2</item>
        <item>Zone 3</item>
        <item>Zone 4</item>
        <item>Zone 5</item>
    </string-array>
    <string name="no_programs">No Programs</string>
    <string name="run">Run</string>
    <string name="stop">Stop</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading&#8230;</string>
    <string name="running">Running</string>
    <string name="ready">Ready</string>

    <string name="zone_1">Zone 1:</string>
    <string name="zone_2">Zone 2:</string>
    <string name="zone_3">Zone 3:</string>
    <string name="zone_4">Zone 4:</string>
    <string name="zone_5">Zone 5:</string>
    <string name="name">Name:</string>
    <string name="zone_times">Zone Times:</string>
    <string name="run_times">Run Times:</string>
    <string name="submit_changes">Submit Changes</string>
</resources>
